fixed video texture and playback. Still need to add interactive method to mock autoplay on mobile

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
-    
+    height: 100%;
     /* hide scrollbars */
     overflow: hidden;
   }
@@ -49,4 +49,15 @@ body {
     display: block;
     max-width: 100%;
     object-fit: cover;
+  }
+
+
+  #enter-site {
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: grey;
+
   }
